--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-snappy": "^1.0",
         "fideloper/proxy": "^4.2",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
